BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithPermsXLation/src/objects/EM_Event_Speaker_vod__c.object
<CustomObject>
    <fields>
        <fullName>Ready_to_Invoice_HCPTS__c</fullName>
        <formula>CASE(

0, 
IF
(
  AND( 
       ISPICKVAL(Service_Type_HCPTS__c,&apos;Services&apos;),
       ISPICKVAL(Event_Speaker_Contract_HCPTS__r.Status_vod__c,&apos;Activated_vod&apos;),
       ISPICKVAL(Speaker_Contract_HCPTS__r.Status_vod__c,&apos;Activated_vod&apos;),
       ISPICKVAL( Contract_Format_HCPTS__c ,&apos;Long-term&apos;)
    )
 ,
 0, 1) ,
 
&apos;Yes&apos;, 

IF
(
  AND( 
       ISPICKVAL(Service_Type_HCPTS__c,&apos;Services&apos;),
       ISPICKVAL(Event_Speaker_Contract_HCPTS__r.Status_vod__c,&apos;Activated_vod&apos;),
       ISPICKVAL( Contract_Format_HCPTS__c ,&apos;Short-term&apos;)
    )
 ,
 0, 1) ,
 
&apos;Yes&apos;, 


IF
(
  AND( 
       ISPICKVAL(Service_Type_HCPTS__c,&apos;Sponsorship&apos;),
       ISPICKVAL(Event_Speaker_Contract_HCPTS__r.Status_vod__c,&apos;Activated_vod&apos;)
     )
 ,
 0, 1) ,
 
&apos;Yes&apos;, 

IF
(
  AND( 
       ISPICKVAL(Service_Type_HCPTS__c,&apos;Events&apos;),
       ISPICKVAL(Event_Speaker_Contract_HCPTS__r.Status_vod__c,&apos;Activated_vod&apos;)
     )
 ,
 0, 1) ,
 
&apos;Yes&apos;,


&apos;No&apos;)</formula>
        <label>Ready for PO?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Email_HCPTS__c</fullName>
        <formula>Speaker_vod__r.Account_vod__r.Email_MSL_BMS_SHARED__c</formula>
        <label>Recipient Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Status_HCPTS__c</fullName>
        <description>Status updated by Logistics provider based on attendee response. Not editable.</description>
        <inlineHelpText>Status updated by Logistics provider based on attendee response. Not editable.</inlineHelpText>
        <label>Registration Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reimbursable_Expenses_HCPTS__c</fullName>
        <description>Reimbursable Expenses</description>
        <label>Reimbursable Expenses</label>
        <picklist>
            <picklistValues>
                <fullName>BMS will pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS will not pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS will pay max agreed amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_ICF_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related ICF</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND ((4 AND 5) OR (6 AND 7) OR 8)</booleanFilter>
            <filterItems>
                <field>$Source.Speaker_vod__c</field>
                <operation>equals</operation>
                <valueField>Information_Collection_Form__c.Speaker_HCPTS__c</valueField>
            </filterItems>
            <filterItems>
                <field>Information_Collection_Form__c.Status_HCPTS__c</field>
                <operation>equals</operation>
                <value>Signed, Signed Manually</value>
            </filterItems>
            <filterItems>
                <field>Information_Collection_Form__c.Expired_Formula_HCPTS__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Type_HCPTS__c</field>
                <operation>equals</operation>
                <value>Services</value>
            </filterItems>
            <filterItems>
                <field>Information_Collection_Form__c.ICF_Type_HCPTS__c</field>
                <operation>equals</operation>
                <value>HCP/Non-HCP Services, HCO Services</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Type_HCPTS__c</field>
                <operation>equals</operation>
                <value>Sponsorship</value>
            </filterItems>
            <filterItems>
                <field>Information_Collection_Form__c.ICF_Type_HCPTS__c</field>
                <operation>equals</operation>
                <value>Sponsorship</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Type_HCPTS__c</field>
                <operation>equals</operation>
                <value>Events</value>
            </filterItems>
            <infoMessage>Only Signed unexpired ICFs are available for selection from this screen corresponding to the Contract type and Subtypes</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Information_Collection_Form__c</referenceTo>
        <relationshipName>Event_Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Subtype_HCPTS__c</fullName>
        <description>Service subtype</description>
        <inlineHelpText>Service subtype</inlineHelpText>
        <label>Contract Subtype</label>
        <picklist>
            <controllingField>Service_Type_HCPTS__c</controllingField>
            <picklistValues>
                <fullName>Speaker Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Monitoring Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Presentation (one-time)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Presentation (Serial)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Review Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication Steering Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study Steering Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDA Mock Advisory Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Preparation and/or Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recorded Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation at a Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship to Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attendee for Preceptorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty for Preceptorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibits, Booths and Displays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Type_HCPTS__c</fullName>
        <description>Helps categorize a Contract per BMS Service Type. Please note: Long-term &amp; Short-term apply to Services Contract. Short-term contracts do not include an MSA while Long-term contracts do when Contracts are sent out to HCP. Events and Sponsorship Contract types applies to Exhibits &amp; Sponsorship activities respectively.</description>
        <inlineHelpText>Helps categorize a Contract per BMS Service Type. Please note: Long-term &amp; Short-term apply to Services Contract. Short-term contracts do not include an MSA while Long-term contracts do when Contracts are sent out to HCP.</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session_Title_vod__c</fullName>
        <description>Title of an event session</description>
        <label>Session Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Datetime_vod__c</fullName>
        <description>Stores the Datetime of when the Signature was captured.</description>
        <label>Roster Signature Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Used to store the Signature.</description>
        <label>Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signer_1_Email_HCPTS__c</fullName>
        <formula>Related_ICF_HCPTS__r.Signer_Email_HCPTS__c</formula>
        <label>Primary Signatory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Contract_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Framework Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract_vod__c.Speaker_HCPTS__c</field>
                <operation>equals</operation>
                <valueField>$Source.Speaker_vod__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value>Activated</value>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.Expired_vod__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.Service_Type_HCPTS__c</field>
                <operation>equals</operation>
                <valueField>$Source.Service_Type_HCPTS__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contract_vod__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Framework Agreement</value>
            </filterItems>
            <infoMessage>Only Signed unexpired Framework Agreements for the Speaker are selectable from this screen</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contract_vod__c</referenceTo>
        <relationshipName>Event_Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speaker_Email_HCPTS__c</fullName>
        <description>Formula field showing the Service Provider&apos;s email address</description>
        <formula>Speaker_vod__r.Email_HCPTS__c</formula>
        <inlineHelpText>Formula field showing the Service Provider&apos;s email address</inlineHelpText>
        <label>Service Provider Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Full_Address_HCPTS__c</fullName>
        <formula>Speaker_vod__r.Address_Line_1_HCTPS__c &amp; &apos;,&apos; &amp; Speaker_vod__r.City_HCPTS__c &amp; &apos;,&apos; &amp; Speaker_vod__r.State_Province_HCPTS__c</formula>
        <label>Speaker Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Name_vod__c</fullName>
        <description>Name of the Service Provider for an Activity</description>
        <formula>Speaker_vod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The speaker for an event.</description>
        <label>Service Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Speaker_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value>Eligible_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Speaker_vod__c</referenceTo>
        <relationshipName>Speakers_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specialty_HCPTS__c</fullName>
        <description>Specialty</description>
        <label>Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_HCPTS__c</fullName>
        <description>Service Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time_vod__c</fullName>
        <description>Start time of the event</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_Provence_HCPTS__c</fullName>
        <formula>Speaker_vod__r.State_Province_HCPTS__c</formula>
        <label>State/ Provence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the speaker for the event.</description>
        <label>Veeva Status</label>
        <picklist>
            <picklistValues>
                <fullName>Nominated_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invited_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleared_Signature_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined_Simple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stub_Mobile_Id_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Stub Mobile Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stub_SFDC_Id_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Stub SFDC Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Suffix_vod__c</fullName>
        <description>Event Speaker Suffix. This value is pulled in from the Suffix_vod field on Speaker record.</description>
        <formula>Speaker_vod__r.Suffix_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suffix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxes_HCPTS__c</fullName>
        <description>Tax Options</description>
        <label>Taxes</label>
        <picklist>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_vod__c</fullName>
        <description>Event Speaker Title. This value is pulled in from the Title_vod field on Speaker record.</description>
        <formula>Speaker_vod__r.Title_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <formula>TEXT(Event_Speaker_Contract_HCPTS__r.Total_Value__c) + &quot; &quot; + 
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;de-DE&quot;, &quot;EUR&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;da-DK&quot;, &quot;DKK&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;de-CH&quot;, &quot;CHF&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;en-AU&quot;, &quot;AUD&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;en-CA&quot;, &quot;CAD&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;en-GB&quot;, &quot;GBP&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;en-IN&quot;, &quot;INR&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;en-NZ&quot;, &quot;NZD&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;en-US&quot;, &quot;USD&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;en-ZA&quot;, &quot;ZAR&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;es-MX&quot;, &quot;MXN&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;ja-JP&quot;, &quot;JPY&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;nb-NO&quot;, &quot;NOK&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;pl-PL&quot;, &quot;PLN&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;pt-BR&quot;, &quot;BRL&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;ru-RU&quot;, &quot;RUB&quot;, &quot;&quot;) +
If(TEXT(Event_Speaker_Contract_HCPTS__r.Currency_HCPTS__c) = &quot;zh-HK&quot;, &quot;HKD&quot;, &quot;&quot;)</formula>
        <label>Total Contract Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vessel_Number_vod__c</fullName>
        <description>Used to store travel details, such as a flight or train number.</description>
        <label>Vessel Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Online_HCPTS__c</fullName>
        <description>Clicking this link displays the Standard page to the user. Useful to perform Contracting operations like Generate Contract, ICF etc</description>
        <formula>HYPERLINK(&apos;/&apos; &amp; Id &amp; &apos;?nooverride=1&apos;,  $Label.View_Standard_Detail_Page ,&quot;_self&quot;)</formula>
        <inlineHelpText>Clicking this link displays the Standard page to the user. Useful to perform Contracting operations like Generate Contract, ICF etc</inlineHelpText>
        <label>View Contracting Buttons</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplace_vod__c</fullName>
        <description>Workplace of an event speaker</description>
        <label>Workplace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_HCPTS__c</fullName>
        <formula>Speaker_vod__r.Zip_Code_HCPTS__c</formula>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <label>Event Service Provider</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Speaker_vod__c</columns>
        <columns>Event_vod__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Speaker_Contract_HCPTS__c</columns>
        <columns>Total_Contract_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ESP-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Service Providers</pluralLabel>
    <recordTypes>
        <fullName>Event_Purchase_Speaker_HCPTS</fullName>
        <active>true</active>
        <description>Default Event Speaker rectype for Event Purchases</description>
        <label>Event Purchase Speaker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Speaker_vod</fullName>
        <active>true</active>
        <description>Event Speaker</description>
        <label>Event_Speaker_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events_Event_Speaker_HCPTS</fullName>
        <active>true</active>
        <description>Recordtype for Events Contract Type</description>
        <label>Events Event Speaker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Services_Event_Speaker_HCPTS</fullName>
        <active>true</active>
        <description>Event Speaker for Contract type Services - assigned behind the scenes via a trigger. Only useful for page layout transitions</description>
        <label>Services Event Speaker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simplified_Event_Speaker_HCPTS</fullName>
        <active>true</active>
        <description>ESP in the SImplified System</description>
        <label>Simplified Event Speaker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sponsorship_Event_Speaker_HCPTS</fullName>
        <active>false</active>
        <description>Recordtype for Sponsorship Contract Type</description>
        <label>Sponsorship Event Speaker</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Event_Team_Member_vod__c</fullName>
        <label>Event Team Member</label>
    </sharingReasons>
    <validationRules>
        <fullName>Cannot_Edit_after_Activity_Approved</fullName>
        <active>false</active>
        <description>Cannot Edit the Activity Speaker Details after the Activity has been Approved</description>
        <errorConditionFormula>ISPICKVAL(Event_vod__r.Status_vod__c, &apos;In Planning&apos;)  &amp;&amp; 
(ISCHANGED(Service_Type_HCPTS__c)  || 
ISCHANGED(Service_Subtype_HCPTS__c)  || 
ISCHANGED(Related_ICF_HCPTS__c) ||
ISCHANGED(Speaker_Contract_HCPTS__c) ||
ISCHANGED(Event_Speaker_Contract_HCPTS__c)|| ISCHANGED(Employer_Name_HCPTS__c) ||
ISCHANGED(Employer_Email_HCPTS__c) ||
ISCHANGED(Employer_Signatory_Name_HCPTS__c) ||
ISCHANGED(Employer_Signatory_Title_HCPTS__c)
)</errorConditionFormula>
        <errorMessage>Cannot edit an Activity Speaker after Activity has been approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_have_more_than_10_Signers</fullName>
        <active>true</active>
        <description>There cannot be more than 10 signers.</description>
        <errorConditionFormula>Number_of_Signers_HCPTS__c &gt; 10</errorConditionFormula>
        <errorMessage>There cannot be more than 10 signers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractGen_AA_Already_Active</fullName>
        <active>true</active>
        <description>Validation rule that the Subtype cannot be blank when trying to generate a contract</description>
        <errorConditionFormula>AND(
Can_Generate_Contract__c = &apos;true&apos;,
 TEXT(Event_Speaker_Contract_HCPTS__r.Status_vod__c) = &apos;Activated_vod&apos; 
)</errorConditionFormula>
        <errorDisplayField>Event_Speaker_Contract_HCPTS__c</errorDisplayField>
        <errorMessage>Activity Agreement is already activated! You cannot generate and send this Contract again to the HCP!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractGen_ES_Status_Activated</fullName>
        <active>true</active>
        <description>Validation rule for contract generation: cannot generate contract if the event speaker contract status is activated</description>
        <errorConditionFormula>AND(
Can_Generate_Contract__c = &apos;true&apos;,
TEXT(Event_Speaker_Contract_HCPTS__r.Status_vod__c) = &apos;Activated_vod&apos;
)</errorConditionFormula>
        <errorMessage>Activity Agreement must not be already Activated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractGen_End_Date</fullName>
        <active>true</active>
        <description>Validation rule for contract generation: Start Date of SOW cannot be after End date of Framework Agreement</description>
        <errorConditionFormula>AND(
Can_Generate_Contract__c = &apos;true&apos;,
ISPICKVAL(Service_Type_HCPTS__c,&apos;Services&apos;),
Event_Speaker_Contract_HCPTS__r.Start_Date_vod__c &gt; Speaker_Contract_HCPTS__r.End_Date_vod__c
)</errorConditionFormula>
        <errorMessage>Start Date of SOW cannot be after End date of Framework Agreement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractGen_Event_In_Planning</fullName>
        <active>true</active>
        <description>Validation rule for contract generation: Event must be in In Planning status</description>
        <errorConditionFormula>AND(
Can_Generate_Contract__c = &apos;true&apos;,
TEXT( Event_vod__r.Status_vod__c ) &lt;&gt; &apos;In Planning&apos;
)</errorConditionFormula>
        <errorMessage>Event must be in In Planning status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractGen_Format_Must_For_Services</fullName>
        <active>true</active>
        <description>Validation rule for contract generation: Services COntract must have Format specified</description>
        <errorConditionFormula>AND(
Can_Generate_Contract__c = &apos;true&apos;,
ISPICKVAL(Service_Type_HCPTS__c,&apos;Services&apos;),
ISBLANK( TEXT(Contract_Format_HCPTS__c))
)</errorConditionFormula>
        <errorMessage>Contract Format must be specified as Long-term or Short-term. Please make a selection. Long-term contracts generate a Framework and Activity Agreement. Short-term contracts only contain an Activity agreement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractGen_Framework_Agreement</fullName>
        <active>true</active>
        <description>Validation rule for contract generation: a framework agreement is required if the contract type is &apos;Services&apos;</description>
        <errorConditionFormula>AND(
Can_Generate_Contract__c = &apos;true&apos;,
ISPICKVAL(Service_Type_HCPTS__c,&apos;Services&apos;),
ISBLANK( Speaker_Contract_HCPTS__c)
)</errorConditionFormula>
        <errorMessage>A Framework Agreement is required for a Service Contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractGen_Language_Must</fullName>
        <active>true</active>
        <description>Validation rule for contract generation: All Contracts must specify the Language for a possible Contract template selection</description>
        <errorConditionFormula>AND(
Can_Generate_Contract__c = &apos;true&apos;,
ISBLANK( TEXT(Contract_Language_HCPTS__c))
)</errorConditionFormula>
        <errorMessage>Contract Language value must be specified. Please pick a value!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractGen_Need_Activity_Agreement</fullName>
        <active>true</active>
        <description>Validation rule for contract generation: Related Activity agreement must be populated</description>
        <errorConditionFormula>AND(
Can_Generate_Contract__c = &apos;true&apos;,
ISBLANK( Event_Speaker_Contract_HCPTS__c)
)</errorConditionFormula>
        <errorMessage>Related Activity agreement must be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractGen_Need_Signers</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Can_Generate_Contract__c = &apos;true&apos;, 
Number_of_Signers_HCPTS__c &lt; 1 
)</errorConditionFormula>
        <errorMessage>There must be at least one signer to generate a contract.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractGen_Related_ICF_Signed</fullName>
        <active>true</active>
        <description>Validation rule for contract generation: the related ICF must be signed or signed manually</description>
        <errorConditionFormula>AND(
Can_Generate_Contract__c = &apos;true&apos;,
TEXT(Related_ICF_HCPTS__r.Status_HCPTS__c) &lt;&gt; &apos;Signed&apos;,
TEXT(Related_ICF_HCPTS__r.Status_HCPTS__c) &lt;&gt; &apos;Signed Manually&apos;
)</errorConditionFormula>
        <errorMessage>The related ICF must be signed or signed manually</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractGen_Start_Date</fullName>
        <active>true</active>
        <description>Validation rule for contract generation: Start Date of SOW cannot be before Start Date of Framework Agreement</description>
        <errorConditionFormula>AND(
Can_Generate_Contract__c = &apos;true&apos;,
ISPICKVAL(Service_Type_HCPTS__c,&apos;Services&apos;),
Event_Speaker_Contract_HCPTS__r.Start_Date_vod__c &lt; Speaker_Contract_HCPTS__r.Start_Date_vod__c
)</errorConditionFormula>
        <errorMessage>Start Date of SOW cannot be before Start Date of Framework Agreement for a Service Contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractGen_Subtype_cannot_be_blank</fullName>
        <active>true</active>
        <description>Validation rule that the Subtype cannot be blank when trying to generate a contract</description>
        <errorConditionFormula>AND(
Can_Generate_Contract__c = &apos;true&apos;,
ISPICKVAL(Service_Subtype_HCPTS__c,&apos;&apos;)
)</errorConditionFormula>
        <errorMessage>Contract Subtype cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Subtype_not_applicable</fullName>
        <active>false</active>
        <description>Contract Subtype should be applicable to selected Activity type</description>
        <errorConditionFormula>OR(

 
AND( Event_vod__r.RecordType.DeveloperName  = &apos;Advisory_Board&apos;, 
NOT(ISBLANK(TEXT(Service_Subtype_HCPTS__c))) ,
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Advisory Board&apos;
),
 AND( Event_vod__r.RecordType.DeveloperName  = &apos;Exhibits_Booths_and_Displays&apos;, 

 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Meeting Space&apos;,
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Exhibit Space&apos;,
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Meeting &amp; Exhibit Space&apos;
,NOT(ISBLANK(TEXT(Service_Subtype_HCPTS__c))) 

)
,

 AND( Event_vod__r.RecordType.DeveloperName  = &apos;Internal_Speaking&apos;, 
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Internal Presentation&apos;
,NOT(ISBLANK(TEXT(Service_Subtype_HCPTS__c))) 
),
 AND( Event_vod__r.RecordType.DeveloperName  = &apos;Other_Consulting&apos;, 
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Content Preparation and/or Review&apos;,
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Recorded Presentation&apos;,
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Protocol Review&apos;,
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Presentation at a Congress&apos;
,NOT(ISBLANK(TEXT(Service_Subtype_HCPTS__c))) 
),
 AND( Event_vod__r.RecordType.DeveloperName  = &apos;Preceptorship&apos;, 
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Attendee for Preceptorship&apos;,
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Faculty for Preceptorship&apos;
,NOT(ISBLANK(TEXT(Service_Subtype_HCPTS__c))) 
),
 AND( Event_vod__r.RecordType.DeveloperName  = &apos;R_D_Committee&apos;, 
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Data Monitoring Committee&apos;,
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Publication Steering Committee&apos;,
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Study Steering Committee&apos;,
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;FDA Mock Advisory Committee&apos;
,NOT(ISBLANK(TEXT(Service_Subtype_HCPTS__c))) 
),
 AND( Event_vod__r.RecordType.DeveloperName  = &apos;Speaker_Meeting&apos;, 
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Moderator&apos;,
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;External Presentation (one-time)&apos;,
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;External Presentation (Serial)&apos;
,NOT(ISBLANK(TEXT(Service_Subtype_HCPTS__c))) 
),

 
AND( Event_vod__r.RecordType.DeveloperName  = &apos;Speaker_Training&apos;, 
 TEXT(Service_Subtype_HCPTS__c)  &lt;&gt; &apos;Speaker Training&apos;
,NOT(ISBLANK(TEXT(Service_Subtype_HCPTS__c))) 
)
 
)</errorConditionFormula>
        <errorDisplayField>Service_Subtype_HCPTS__c</errorDisplayField>
        <errorMessage>Selected Contract Subtype is not applicable to Activity type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Framework_Agmnt_for_Sponsors_Events</fullName>
        <active>true</active>
        <description>Cannot have a Framework agreement for Sponsorship and Events Contract Type</description>
        <errorConditionFormula>AND(
NOT( ISBLANK(Speaker_Contract_HCPTS__c) ) ,

OR(
 ISPICKVAL( Service_Type_HCPTS__c , &apos;Sponsorship&apos;),
 ISPICKVAL( Service_Type_HCPTS__c , &apos;Events&apos;)

)
)</errorConditionFormula>
        <errorDisplayField>Speaker_Contract_HCPTS__c</errorDisplayField>
        <errorMessage>Cannot associate a Framework agreement for Sponsorship and Events Contract Type</errorMessage>
    </validationRules>
</CustomObject>